# CSM-GUI

./: .gitignore  CMakeLists.txt  LICENSE  rebuild.bat  rebuild_full.bat  setup_deps.bat
include/csm_gui/: gui_application.hpp  gui_cmd_output.hpp  gui_terminal.hpp
src/: gui_application.cpp  gui_cmd_output.cpp  gui_terminal.cpp  gui_theme.cpp  main.cpp
